# DeepIsolationForest

./: CMakeLists.txt
include/: DeepIsolationForest.h  IsolationForest.h
src/: DeepIsolationForest.cpp  IsolationForest.cpp  main.cpp
